<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="en">
    <string name="app_name">NearU</string>
    <string name="bugly_app_id" translatable="false">6b04331a45</string>
    <string name="splash_word_1">We connect more</string>
    <string name="splash_word_2">From a place beyond time,and time beyond counting</string>
    <string name="splash_word_3">Better to run than curse the road</string>
    <string name="welcome">Welcome</string>
    <string name="username">Account</string>
    <string name="nick_name">Nickname</string>
    <string name="your_username">Your username</string>
    <string name="email">Email</string>
    <string name="your_email">Your email</string>
    <string name="psw">Password</string>
    <string name="new_psw">Your new password</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="login_successfully">Login successfully</string>


    <string name="email_is_empty">Email is empty</string>
    <string name="username_too_short">Username is too short, 6 characters at least</string>
    <string name="psw_too_short">Password is too short, 6 characters at least</string>
    <string name="register_success">Registration completed, sign in with the new account</string>
    <string name="item_used"> is used, please change another</string>
    <string name="invalid_email">Invalid email: </string>


    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="forget_psw">Forget password?</string>
    <string name="reset_psw">Reset password</string>

    <!-- IM -->
    <string name="default_username" translatable="false">gLn8FBJAkKSBoCGafMNeSQ==</string>
    <string name="default_password" translatable="false">VlWAkOnVs2nENbcYn/O/zg==</string>

    <string name="network_unavailable" translatable="false">Network unreachable!</string>
    <string name="No_Message_Title" translatable="false">No messages</string>
    <string name="No_Message_Body_1" translatable="false">The more messages you send, the more responses you will receive. So start contacting potential matches now.</string>
    <string name="Browse_Matches" translatable="false">Browse nearby</string>
    <string name="loading..." tools:ignore="ExtraTranslation">Loading...</string>
    <string name="Message_Just_Now" translatable="false"><i>Just now</i></string>
    <string name="Message_Few_Minutes" translatable="false"><i>%s minutes</i></string>
    <string name="Yesterday" translatable="false">Yesterday</string>

    <!-- BottomMenu -->
    <string name="chats">Chats</string>
    <string name="moments">Moments</string>
    <string name="connections">Follow</string>
    <string name="discover">Discover</string>

    <!-- ProgressCombineView -->
    <string name="network_failed_title" translatable="false">Oops! Something goes wrong.</string>
    <string name="Oops_Loading_failed" translatable="false">Oops! Loading failed, please try again!</string>
    <string name="network_offline" translatable="false">The internet connection appears to be offline.</string>

    <string name="transition_name_head_img" translatable="false">head_image</string>
    <string name="transition_name_bg_img" translatable="false">bg_image</string>
    <string name="transition_name_user_name" translatable="false">user_name</string>
    <string name="transition_name_pic_full_screen" translatable="false">pic_full_screen</string>
    <string name="transition_name" translatable="false">name%1$d:%2$d</string>

    <!-- from IM demo-->
    <string name="action_settings" translatable="false">Settings</string>
    <string name="login_username_hint" translatable="false">请输入用户名&#8230;</string>
    <string name="login_password_hint" translatable="false">请输入密码&#8230;</string>
    <string name="login_email_hint" translatable="false">请再次输入密码&#8230;</string>
    <string name="login" translatable="false">登录</string>
    <string name="register" translatable="false">注册</string>
    <string name="register_txt1" translatable="false">还没有账号？</string>
    <string name="register_txt2" translatable="false">立即注册 ></string>
    <string name="login_account" translatable="false">账号 </string>
    <string name="login_pwd" translatable="false">密码 </string>
    <string name="login_email" translatable="false">确认密码 </string>

    <string name="main_tab_recent" translatable="false">会话</string>
    <string name="main_tab_contact" translatable="false">联系人</string>
    <string name="mian_tab_set" translatable="false">设置</string>

    <string name="add_avator" translatable="false">头像</string>
    <string name="add_nick" translatable="false">昵称</string>
    <string name="add_name" translatable="false">账号</string>
    <string name="agree" translatable="false">接受</string>
    <string name="new_friend" translatable="false">新朋友</string>

    <string name="chat" translatable="false">陌生人聊天</string>
    <string name="add_friend" translatable="false">添加好友</string>

    <string name="set_notify" translatable="false">接收新消息通知</string>
    <string name="set_myinfo" translatable="false">个人资料</string>
    <string name="set_blacklist" translatable="false">黑名单</string>
    <string name="set_voice" translatable="false">声音</string>
    <string name="set_vibrate" translatable="false">震动</string>
    <string name="logout" translatable="false">退出登陆</string>

    <string name="longclick_speak" translatable="false">长按说话</string>
    <string name="picture" translatable="false">照片</string>
    <string name="camera" translatable="false">拍摄</string>
    <string name="location" translatable="false">位置</string>
    <string name="voice_up_tips" translatable="false">手指上滑,取消发送</string>
    <string name="voice_cancel_tips" translatable="false">松开手指，取消发送</string>
    <string name="voice_seconds_tips" translatable="false">还可以说%1$s秒</string>
    <string name="voice_short_tips" translatable="false">录音时间太短</string>

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_user_info" translatable="false">UserInfoActivity</string>
    <string name="please_to_talk" translatable="false">按住 说话</string>
    <string name="send" translatable="false">发送</string>
    <!--photo picker-->
    <string name="image" translatable="false">图片</string>
    <string name="all_image" translatable="false">所有图片</string>
    <string name="preview" translatable="false">预览</string>
    <string name="msg_no_camera" translatable="false">无法启用系统相机</string>
    <string name="msg_amount_limit" translatable="false">已经达到最高选择数量</string>
    <string name="photo_picker_done" translatable="false">完成</string>
    <string name="done_with_count" translatable="false">完成(%1$d/%2$d)</string>
    <string name="image_index" translatable="false">%1$d/%2$d</string>
    <string name="delete" translatable="false">删除</string>
    <string name="deleted_a_photo" translatable="false">删除了一张图片</string>
    <string name="confirm_to_delete" translatable="false">确认删除？</string>
    <string name="yes" translatable="false">确定</string>
    <string name="photo_picker_cancel" translatable="false">取消</string>
    <string name="undo" translatable="false">撤消</string>
    <!--block canary-->
    <string name="block_canary_display_activity_label" translatable="false">Blocks</string>
</resources>
