<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/no_item_tips"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/activity_bg"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/connection_stroke_bg"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="30dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="30dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/No_Message_Title"
                android:textColor="@color/text_black"
                android:textSize="19sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/No_Message_Body_1"
                android:textColor="@color/text_subtitle_color"
                android:textSize="15sp" />

            <Button
                android:id="@+id/empty_message_browsematches"
                android:layout_width="240dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"
                android:background="@drawable/green_button"
                android:text="@string/Browse_Matches"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:visibility="visible" />
        </LinearLayout>
    </LinearLayout>


</FrameLayout>